fix: arreglo overflow .navbar

--- a/Dentists Templates/Template #1/page#1/index.css
+++ b/Dentists Templates/Template #1/page#1/index.css
@@ -102,6 +102,7 @@ body{
     
     min-height: 80px;
     width: 100vw;
+    max-width: 100%;
     margin: auto;
 
     background: var(--backgroungNav);
